--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "snowball-fight-online",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "StickFighter",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "server": "browserify -x uws ./client/client.js > ./build/client.bundle.js && node server.js",
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codyseibert/snowball-fight-online.git"
-  },
-  "keywords": [],
-  "author": "",
+  "version": "1.0.0",
+  "main": "index.js",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/codyseibert/snowball-fight-online/issues"
-  },
-  "homepage": "https://github.com/codyseibert/snowball-fight-online#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "socket.io": "^4.5.3"
+    "browserify": "^16.5.0",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
+    "uws": "^100.0.1"
   }
 }
