--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "StickFighter",
-  "scripts": {
-    "server": "browserify -x uws ./client/client.js > ./build/client.bundle.js && node server.js",
-    "start": "node server.js"
-  },
-  "version": "1.0.0",
+  "name": "mouse input test",
+  "version": "0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "browserify": "^16.5.0",
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0",
-    "uws": "^100.0.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",   
+    "socket.io": "^4.7.2"
   }
 }
